Fixes view of menu grid on mobile.

--- a/main.css
+++ b/main.css
@@ -22,11 +22,11 @@ body{
 #content {
     padding-bottom: 45px;
     padding-top: 70px;
-    width:100%;
     max-width: 1080px;
     margin:0 auto;
     min-height: 100vh;
     position: relative;
+    width:100%;
     height: 100%;
 }
 
@@ -263,8 +263,9 @@ body{
 /* Menu Tab */
 #main-content-menu {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(150px, 1fr));
+    grid-auto-flow: row;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     gap: 15px;
     height: 100%;
     width: 70%;
@@ -373,8 +374,7 @@ body{
     }
 
     #main-content-menu {
-        width: 100%;
-        display:block;
+        width: 95%;
     }
 
 }
